# genenv

./: README.md  pyproject.toml
src/genenv/: cli.py  env_generator.py  example.genenv.json
src/genenv/azure/: client.py
src/genenv/utils/: prompt.py
